@@ -2055,7 +2055,7 @@ body {
 
 <p><strong>stat_per_primary</strong> | <code>predefined_string, predefined_string, int : Primary Stat, Stat name, Value</code> | The value for this stat added for every point allocated to this primary stat.</p>
 
-<p><strong>vulnerable</strong> | <code>predefined_string, int : Element, Value</code> | Percentage weakness to this element.</p>
+<p><strong>vulnerable</strong> | <code>predefined_string, int : Element, Value</code> | (Deprecated in v1.12.91; use a '..._resist' value with 'stat' instead) Percentage weakness to this element.</p>
 
 <p><strong>power_filter</strong> | <code>list(power_id)</code> | Only these powers are allowed to hit this entity.</p>
 
