@@ -348,9 +348,9 @@ void MenuCharacter::refreshStats() {
 	}
 
 	if (show_resists) {
-		for (unsigned int j=0; j<pc->stats.vulnerable.size(); ++j) {
+		for (unsigned int j=0; j<eset->elements.list.size(); ++j) {
 			ss.str("");
-			ss << msg->get("Resistance (%s)", eset->elements.list[j].name) << ": " << (100 - pc->stats.vulnerable[j]) << "%";
+			ss << msg->get("Resistance (%s)", eset->elements.list[j].name) << ": " << (pc->stats.getResist(j)) << "%";
 			statList->set(j+stat_index, ss.str(), msg->get("Reduces the damage taken from \"%s\" elemental attacks.", eset->elements.list[j].name));
 		}
 	}
